--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "next": "14.2.35",
+    "react": "^18",
+    "react-dom": "^18",
     "@prisma/client": "^5.16.0",
+    "next-auth": "^4.24.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.400.0",
-    "next": "^16.1.6",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/bcryptjs": "^2.4.6",
+    "prisma": "^5.16.0",
+    "tsx": "^4.16.2",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^16.1.6",
-    "postcss": "^8",
-    "prisma": "^5.16.0",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.16.2",
-    "typescript": "^5"
+    "eslint-config-next": "14.2.35"
   }
 }
