--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
-    "@prisma/client": "^5.16.0",
+    "@prisma/client": "5.16.0",
     "next-auth": "^4.24.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
@@ -29,7 +29,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/bcryptjs": "^2.4.6",
-    "prisma": "^5.16.0",
+    "prisma": "5.16.0",
     "tsx": "^4.16.2",
     "tailwindcss": "^3.4.1",
     "postcss": "^8",
