feat: replace phone with birthYear

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database PostgreSQL (Railway fornisce questa variabile automaticamente)
-DATABASE_URL="postgresql://user:password@host:5432/dbname"
+DATABASE_URL="postgresql://postgres:iLUlKcflMFsjQtTQZrbORfaWwmdzmftR@postgres.railway.internal:5432/railway"
 
 # NextAuth - genera un segreto con: openssl rand -base64 32
 NEXTAUTH_SECRET="cambia-questo-con-un-segreto-sicuro"
